Responsive version on the configurator, Z-index to the header and cookie banner -> prevent bug, new section for the responsive version, new images

--- a/_sass/components/cookie-banner.scss
+++ b/_sass/components/cookie-banner.scss
@@ -5,7 +5,7 @@
     left: 5%;
     border-radius: 8px;
     padding: 4vw;
-    
+    z-index: 100;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.418);
 
