--- a/_sass/layouts/header.scss
+++ b/_sass/layouts/header.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: start;
   top: 0;
+  z-index: 20;
 }
 
 .logo {
